wundergraph_cli/src/print_schema/snapshots/tests__main-2.snap
---
source: wundergraph_cli/src/print_schema/mod.rs
expression: "r.json::<serde_json::Value>().unwrap()"
---
{
  "data": {
    "Users": []
  }
}
