wundergraph_cli/src/print_schema/snapshots/tests__main-3.snap
---
source: wundergraph_cli/src/print_schema/mod.rs
expression: "r.json::<serde_json::Value>().unwrap()"
---
{
  "errors": [
    {
      "locations": [
        {
          "column": 23,
          "line": 2
        }
      ],
      "message": "Invalid value for argument \"NewUser\", expected type \"NewUser!\""
    }
  ]
}
