wundergraph_cli/src/print_schema/snapshots/tests__round_trip-2.snap
---
source: wundergraph_cli/src/print_schema/mod.rs
expression: "r.json::<serde_json::Value>().unwrap()"
---
{
  "data": {
    "CreateUser": {
      "id": 1,
      "name": "Max"
    }
  }
}
