wundergraph_cli/src/print_schema/snapshots/tests__round_trip-3.snap
---
source: wundergraph_cli/src/print_schema/mod.rs
expression: "r.json::<serde_json::Value>().unwrap()"
---
{
  "data": {
    "Users": [
      {
        "id": 1,
        "name": "Max"
      }
    ]
  }
}
